Revision history for Dinotrace

The contributors that suggested a given feature are shown in [].
	
* Dinotrace 9.1*****

**      NEWS file is now renamed Changes.

* Dinotrace 9.1n 10/22/2004

****	Fix slow file reading with >128 bit __en signals. [Ta-Chung Chang]

****	Fix signed analog display.  [Uwe Bonnes]

* Dinotrace 9.1m 04/21/2004

***	Fix duplicate and embeded __en cosmos signals. [Krishna Rangan]

****	Fix buffer overrun bugs.  [Samuel Ho]

* Dinotrace 9.1k 06/06/2003

****	Fix crash with busses that are replicated with different widths.

* Dinotrace 9.1j 03/22/2003

****	When window is resized, keep same percentage of trace visible.

****	Fix File Reread duplicating signals.  [Uwe Bonnes]

****	Fix File Reread with identically named signals.

****	Fix dropping of 0s on signals > 32 bits. [Jason Mancini]

****	Fix coredump on read and GCC 3.2.  [Jason Mancini]

* Dinotrace 9.1i  03/07/2003

***	Display values with appropriate leading 0s. [Dan McMahill]

***	Fix 0 extension of verilog values.  [Dominik Strasser, Bill Welch]

* Dinotrace 9.1h  08/30/2002

***	Save_duplicates is now on by default.

****	Fixed several bugs when save_duplicates is enabled.

****	Updated Windows install.  [Greg Loxtercamp]

****	Fixed coredump reading wide ascii traces.  [Vitaly Oratovsky]

* Dinotrace 9.1g  01/24/2002

***	Reread all traces on receiving a USR1 signal.  [Uwe Bonnes]

****	Allow value searches on one-bit signals.  [Vitaly Oratovsky]

* Dinotrace 9.1f  01/08/2002

***	Let right button terminate Zoom click.  [Uwe Bonnes]

****	Fixed Emacs 21.0 incompatibility with back-annotation.

****	Hacked around bug causing window manager crash when
	using Examine inside Zoom.  [Uwe Bonnes]

* Dinotrace 9.1e  11/16/2001

***	Allow 1-bit wide signals to have statenames.  [Dominik Strasser]

***	Eliminate common prefix from postscript dumps.  [Dominik Strasser]

***	Show count of posedges and negedges in value examine.

* Dinotrace 9.1d  5/24/2001
